objects/Testing__c.object
<CustomObject>
    <fields>
        <fullName>TestingF1__c</fullName>
        <label>TestingF1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestingF2__c</fullName>
        <label>TestingF2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestingF3__c</fullName>
        <label>TestingF3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Testing</label>
    <nameField>
        <label>Testing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Testings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>